# pinn_diffusion_trotter_suzuki

./: .gitignore  README.md  README_cn.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/experiment/: molecular_h2.yaml  tfim_4q_poc.yaml  tfim_8q_main.yaml
configs/model/: diffusion.yaml  gnn_encoder.yaml  pinn.yaml
configs/training/: phase1_dataset.yaml  phase2_pinn_pretrain.yaml  phase3_joint_train.yaml  phase4_closed_loop.yaml
experiments/: 01_generate_dataset.py  02_pretrain_pinn.py  03_pretrain_diffusion.py  04_closed_loop_finetune.py  05_benchmark_evaluation.py  06_generate_paper_figures.py  07_ablation_runner.py  08_h2_bond_scan.py  09_lih_bond_scan.py  10_heisenberg_scan.py  11_molecular_acceptance.py
experiments/benchmark_results/: 6d_poc_results.json  ablation_full_model.json  ablation_no_cfg.json  ablation_no_gnn_encoder.json  ablation_no_gumbel_estimator.json  ablation_no_pinn_guidance.json  ablation_no_structured_matrix.json  ablation_summary.json  benchmark_5d2_acceptance.json  benchmark_eval_paulihedral_smoke.json  benchmark_evaluation_results.json  benchmark_evaluation_results_paulihedral_gpu.json  h2_bond_scan.json  h2_bond_scan_smoke.json  heisenberg_scan.json  heisenberg_scan_smoke.json  lih_bond_scan.json  lih_bond_scan_smoke.json  molecular_acceptance_report.json  molecular_acceptance_report_smoke.json  smoke_benchmark_new_baselines.json
experiments/closed_loop_checkpoints/: gnn_pretrain_report.json
experiments/diffusion_checkpoints_4b3/: gnn_pretrain_report.json
experiments/pinn_checkpoints_phase3e2/: pinn_pretrain_report_4q.json
src/pinn_trotter/: __init__.py
tests/integration/: test_closed_loop_smoke.py  test_dataset_integrity.py  test_end_to_end_poc.py
(+60 files in other folders)
