[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-trotter"
version = "0.1.0"
description = "Physics-Informed Generative Framework for Intelligent Trotter-Suzuki Decomposition Optimization"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "torch-geometric>=2.4",
    "torch-scatter",
    "torch-sparse",
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "qiskit-nature>=0.7",
    "pyscf>=2.4",
    "h5py>=3.10",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "pymoo>=0.6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "networkx>=3.2",
    "scienceplots>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "tqdm>=4.66",
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.7",
    "types-tqdm",
    "ipykernel",
    "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN"]
"experiments/*" = ["ANN"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "experiments/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "gpu: mark test as requiring GPU",
    "slow: mark test as slow",
    "integration: mark test as integration test",
]
